--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
-<h1>Hello!</h1>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Prime Steak</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<script src="https://kit.fontawesome.com/444209a0db.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <header id="header">
+			<div class="container">
+				<div class="logo"><i class="fab fa-product-hunt"></i>
+
+        </div>
+				<nav>
+          <a href="#OurStory">Our Story</a>
+          <a href="#Reviews">Reviews</a>
+          <a href="#SpecialMenu">Special Menu</a>
+          <a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank">Reservations</a>
+          <a href="#ContactUs">Contact Us</a>
+				</nav>
+			</div>
+		</header>
+    <section id="TopImg">
+    <div class="container">
+      <div class="title">
+        <h5>Welcome</h5>
+        <h1>Prime Steak Restaurant</h1>
+      </div>
+      <div class="contact-info">
+        <div class="container">
+        <div class="booking">Book Table Directly</div>
+        <h2>(215) - 468 - 6550</h2>
+        <div class="hours">
+          Opening Hours <strong>Mon - Fri:</strong> 12pm - 10pm
+          <strong>Weekends:</strong> 12pm - 11pm
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <section id="OurStory">
+  			<div class="container">
+  				<div class="row">
+  					<div class="col-md-6">
+  						<h5 class="comp-title">Our Story</h5>
+  						<h2>An Authentic Brazialian Experience</h2>
+  						<p>Legend has it that, in South Brazil traditional gauchos (cowboys) would consume a diet that consisted almost entirely of beef. The meat was seasoned, placed on skewers, and slow cooked over a wood burning flame. Historically, gauchos were known for their generosity and hospitality.</p>
+              <p>We have combined traditional Brazilian rodizio and excellent service with an elegant setting.</p>
+              <p>Gauchos roam the dining room continuously offering exquisite churrasco of over 15 rotisserie meats including top sirloin, filet, ribs, lamb, pork, chicken, sausage and fish.</p>
+  						<div class="quote">"The best steakhouse in Philly."- <strong>Anthony Bourdain</strong></div>
+  						<a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank" class="reserve-btn">Reserve</a>
+  					</div>
+
+
+  					<div class="col-md-6">
+  						<div class="video-img">
+
+              </div>
+  					</div>
+  				</div>
+  			</div>
+  		</section>
+      <section id="SpecialMenu">
+        <div class="container">
+          <h5 class="comp-title">Special Menu</h5>
+          <h2>Rodízio </h2>
+          <div class="row boxes">
+            <div class="col-md-4">
+              <div class="box">
+                <div class="box-img-1">
+                  <div class="price-circle">$25</div>
+                </div>
+
+                <span class="title">Flank Steak</span>
+                <p class="details">This gourmet specialty is a bottom round cut, roasted to perfection. It's our most ordered dish.</p>
+
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="box">
+                <div class="box-img-2">
+                  <div class="price-circle">$25</div>
+                </div>
+
+                <span class="title">Angus Picanha</span>
+                <p class="details">Our Signature Cut- CAB Picanha is a prime cut of the top Sirloin and our Gauchos grill it to perfection</p>
+
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="box">
+                <div class="box-img-3">
+                  <div class="price-circle">$25</div>
+                </div>
+
+                <span class="title">Picanha with Chimichurri & Grilled Jalapenos</span>
+                <p class="details">A prime cut of the top Sirloin grilled to perfection with a side of chimichurri sauce and grilled jalepenos.</p>
+
+              </div>
+            </div>
+          </div>
+          <a href="#" class="link">View Full Menu</a>
+        </div>
+      </section>
+      <section id="RandomQuote">
+        <div class="container">
+              <h1>"I eat steak primarily. That's pretty much what my diet consists of. Sometimes I supplement that with other steaks."</h1>
+              <span class="author">Jocko Willink</span>
+        </div>
+
+      </section>
+      <section id="Reviews">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 side-img">
+              <img src="https://www.chimasteakhouse.com/files/menu/1492006670.jpg">
+            </div>
+            <div class="col-md-4">
+          <h5 class="comp-title">Reviews</h5>
+          <div class="mySlides fade">
+          <h2>The Food Network</h2>
+          <h4>"Best Steakhouse in the Philadelphia area!"</h4>
+          <p>“Come hungry” to this “swanky”, “enormous” Brazilian steakhouse near Logan Square for a “gargantuan” dining experience featuring a “never-ending supply of the tastiest meats” served by “attentive” gauchos, plus an “amazing” salad bar; some find it a “bit pricey”, but most consider it a “win.”</p>
+          <div class="author"><strong>Dante Silva</strong> <em>-Food Writer</em></div>
+        </div>
+        <div class="mySlides fade">
+        <h2>Zagat Philadelphia</h2>
+        <h4>"They have the Meats!"</h4>
+        <p>A “gluttonous meat adventure” awaits at this all-you-can-eat Brazilian steakhouse “splurge” in a “beautiful” former bank off the Avenue of the Arts, where “attentive” waiters deliver “delicious” cuts until you flip your green card to red, so "if you go home hungry, that’s your own fault..</p>
+        <div class="author"><strong>Rick James</strong> <em>-International Food Critic</em></div>
+      </div>
+      <div class="mySlides fade">
+      <h2>The Travel Channel</h2>
+      <h4>"Absolute Perfection"</h4>
+      <p>This upscale steakhouse chain “knows how to treat a customer” with “mouthwatering” beef, “wine pairings” and “outstanding” service; add a “fabulous city” vibe, and whether it's an “intimate dinner” or happy-hour “bar food with friends”, “they do everything they can to make it special” here.
+</p>
+      <div class="author"><strong>Wolfgang Puck</strong> <em>-World-Renowned Chef</em></div>
+    </div>
+          <div class="arrows">
+            <a class="prev" onclick="plusSlides(-1)"><i class="fas fa-arrow-left"></i></a>
+          <a class="next" onclick="plusSlides(1)"> <i class="fas fa-arrow-right ready"></i></a>
+          </div>
+
+        </div>
+          </div>
+        </div>
+      </section>
+      <section id="ContactUs">
+        <div class="container">
+          <h5 class="comp-title">Contact Us</h5>
+          <h2>We are Always Here to Help You</h2>
+          <div class="box">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="title">
+                  Philadelphia, PA
+                </div>
+                <h6 class="address">
+                  1501 Broad Street
+                  Philadelphia, PA 19122
+                </h6>
+                <p>
+                  <strong>email:</strong><a href="mailto:info@primesteaks.com">info@primesteak.com</a>
+                </p>
+              </div>
+              <div class="col-md-6">
+                <h6>
+                  Phone:
+                </h6>
+                <div class="title">
+                  215-468-6550
+                </div>
+                <h6>
+                  Lunch Service:
+                </h6>
+                <p>
+                  Friday, Saturday, and Sunday<br/> from 12pm - 3:30pm
+                </p>
+                <h6>
+                  Dinner Service:
+                </h6>
+                <p>
+                  Daily<br/> from 4:30pm - 9:30pm
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="container">
+          <nav class="menu">
+            <a href="#">Our Story</a>
+            <a href="#">Reviews</a>
+            <a href="#">Special Menu</a>
+            <a href="#">Reservations</a>
+            <a href="#">Contact Us</a>
+          </nav>
+          <ul class="social-media">
+            <li><a href="http://www.facebook.com" target="new"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="http://www.instagram.com" target="new"><i class="fab fa-instagram-square"></i></a></li>
+            <li><a href="http://www.twitter.com" target="new"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="http://www.youtube.com" target="new"><i class="fab fa-youtube-square"></i></a></li>
+
+
+
+
+
+
+          </ul>
+          <div class="copyright">
+            © 2020
+          </div>
+        </div>
+        <footer>
+  <script src="js/slider.js"></script>
+</body>
+
+</html> 
