--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Prime Steak</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="css/styles.css">
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Prime Steak</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="public/css/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <script src="https://kit.fontawesome.com/444209a0db.js" crossorigin="anonymous"></script>
 </head>
