--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </div>
         </div>
         <footer>
-  <script src="js/slider.js"></script>
+  <script src="public/js/slider.js"></script>
 </body>
 
 </html> 
