Cleaned up the entire project.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Prime Steak</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="public/css/styles.css">
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Prime Steak</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/scss/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<link href="//db.onlinewebfonts.com/c/38292514d8f80b45216b865422916b0b?family=Brandon+Text" rel="stylesheet" type="text/css"/>
 <script src="https://kit.fontawesome.com/444209a0db.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,16 +21,16 @@
     <section id="TopImg">
     <div class="container">
       <div class="title">
-        <h5>Welcome</h5>
+        <h5>PRIME FLAVOR. LOCAL FLAIR.</h5>
         <h1>Prime Steak Restaurant</h1>
       </div>
       <div class="contact-info">
         <div class="container">
-        <div class="booking">Book Table Directly</div>
-        <h2>(215) - 468 - 6550</h2>
+        <div class="booking"><a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank">Book Table</a></div>
+        <h2>(215) - 555 - 6550</h2>
         <div class="hours">
-          Opening Hours <strong>Mon - Fri:</strong> 12pm - 10pm
-          <strong>Weekends:</strong> 12pm - 11pm
+          <strong>Mon - Fri:</strong> 12pm - 10pm
+          <span><strong>Sat - Sun:</strong> 12pm - 11pm</span>
         </div>
       </div>
     </div>
@@ -45,7 +46,7 @@
               <p>We have combined traditional Brazilian rodizio and excellent service with an elegant setting.</p>
               <p>Gauchos roam the dining room continuously offering exquisite churrasco of over 15 rotisserie meats including top sirloin, filet, ribs, lamb, pork, chicken, sausage and fish.</p>
   						<div class="quote">"The best steakhouse in Philly."- <strong>Anthony Bourdain</strong></div>
-  						<a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank" class="reserve-btn">Reserve</a>
+  						<a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank" class="reserve-btn">Find a Table</a>
   					</div>
 
 
@@ -80,7 +81,7 @@
                 </div>
 
                 <span class="title">Angus Picanha</span>
-                <p class="details">Our Signature Cut- CAB Picanha is a prime cut of the top Sirloin and our Gauchos grill it to perfection</p>
+                <p class="details">Our Signature Cut- CAB Picanha is a prime cut of the top Sirloin and our Gauchos grill it to perfection.</p>
 
               </div>
             </div>
@@ -112,18 +113,18 @@
             <div class="col-md-8 side-img">
               <img src="https://www.chimasteakhouse.com/files/menu/1492006670.jpg">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 review-box">
           <h5 class="comp-title">Reviews</h5>
           <div class="mySlides fade">
           <h2>The Food Network</h2>
           <h4>"Best Steakhouse in the Philadelphia area!"</h4>
-          <p>“Come hungry” to this “swanky”, “enormous” Brazilian steakhouse near Logan Square for a “gargantuan” dining experience featuring a “never-ending supply of the tastiest meats” served by “attentive” gauchos, plus an “amazing” salad bar; some find it a “bit pricey”, but most consider it a “win.”</p>
+          <p>“Come hungry” to this “swanky”, “enormous” Brazilian steakhouse near Logan Square for a “gargantuan” dining experience featuring a “never-ending supply of the tastiest meats” served by “attentive” gauchos, plus an “amazing” salad bar. Some find it a “bit pricey”, but most consider it a “win.”</p>
           <div class="author"><strong>Dante Silva</strong> <em>-Food Writer</em></div>
         </div>
         <div class="mySlides fade">
         <h2>Zagat Philadelphia</h2>
         <h4>"They have the Meats!"</h4>
-        <p>A “gluttonous meat adventure” awaits at this all-you-can-eat Brazilian steakhouse “splurge” in a “beautiful” former bank off the Avenue of the Arts, where “attentive” waiters deliver “delicious” cuts until you flip your green card to red, so "if you go home hungry, that’s your own fault..</p>
+        <p>A “gluttonous meat adventure” awaits at this all-you-can-eat Brazilian steakhouse. "Splurge” in a “beautiful” former bank off the Avenue of the Arts, where “attentive” waiters deliver “delicious” cuts until you flip your green card to red, so "if you go home hungry, that’s your own fault..</p>
         <div class="author"><strong>Rick James</strong> <em>-International Food Critic</em></div>
       </div>
       <div class="mySlides fade">
@@ -157,7 +158,7 @@
                   Philadelphia, PA 19122
                 </h6>
                 <p>
-                  <strong>email:</strong><a href="mailto:info@primesteaks.com">info@primesteak.com</a>
+                  <strong>email:</strong><a href="mailto:info@primesteaks.com"> info@primesteak.com</a>
                 </p>
               </div>
               <div class="col-md-6">
@@ -165,7 +166,7 @@
                   Phone:
                 </h6>
                 <div class="title">
-                  215-468-6550
+                  215-555-6550
                 </div>
                 <h6>
                   Lunch Service:
@@ -187,11 +188,11 @@
       <footer>
         <div class="container">
           <nav class="menu">
-            <a href="#">Our Story</a>
-            <a href="#">Reviews</a>
-            <a href="#">Special Menu</a>
-            <a href="#">Reservations</a>
-            <a href="#">Contact Us</a>
+            <a href="#OurStory">Our Story</a>
+            <a href="#Reviews">Reviews</a>
+            <a href="#SpecialMenu">Special Menu</a>
+            <a href="https://www.opentable.com/nearme/steakhouse-restaurants-near-me" target="_blank">Reservations</a>
+            <a href="#ContactUs">Contact Us</a>
           </nav>
           <ul class="social-media">
             <li><a href="http://www.facebook.com" target="new"><i class="fab fa-facebook-square"></i></a></li>
